# udacity-dend-capstone

./: README.md  config.ini  main.py  notebook.ipynb  pyproject.toml
assets/: immigration_data_sample.csv  travel-methods.txt  us-states.txt
pipelines/: __init__.py  helpers.py  pipeline_dim_demographics.py  pipeline_dim_demographics_test.py  pipeline_dim_immigrations.py  pipeline_dim_immigrations_test.py  pipeline_dim_temperatures.py  pipeline_dim_temperatures_test.py  pipeline_fact_immigrations.py  pipeline_fact_immigrations_test.py
